.kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: klausurapp
  name: klausurapp
  namespace: noah.liberka
spec:
  clusterIP: 10.245.232.46
  clusterIPs:
  - 10.245.232.46
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-80
    nodePort: 32689
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: klausurapp
  sessionAffinity: None
  type: NodePort
